--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% content_for(:navbar_class, "navbar-home") %>
+
+<div class="banner">
+  <div class="banner-content text-center">
+    <h1>SoulJam</h1>
+    <p>Let's speak the language of the soul</p>
+    <%= link_to "Start now", new_user_session_path, class: "btn btn-lg btn-primary" %>
+  </div>
+</div>
+
+<% content_for(:footer_class, "footer-home") %>
