--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -2,7 +2,7 @@
   background: $light-gray;
   padding: 10px 20px;
   margin-top: 50px;
-  border-radius: 3px;
+  border-radius: 15px;
   box-shadow: 3px 3px 4px rgba(56, 153, 174, 0.2);
   h2 {
     font-size: 25px;
@@ -17,5 +17,9 @@
   .btn {
     width: 100%;
     margin-bottom: 20px;
+    border-radius: 20px;
+  }
+  .form-control {
+    border-radius: 15px;
   }
 }
