Favicon and toolbar added

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,3 +9,7 @@ $green: #32B796;
 $gray: #C4C4C4; //souljam gray
 $light-gray: #E5E5E5; //souljam lightgray
 $white: #FFFFFF;
+$pri: #4DB6AC;
+$accent: #46627f;
+$whitesmoke: whitesmoke;
+$color-3: #bdc3c7;
