--- a/app/views/jamms/index.html.erb
+++ b/app/views/jamms/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Jamms#index</h1>
 <p>Find me in app/views/jamms/index.html.erb</p>
+
+<div class="container container-sticky">
+  <div class="hover">
+    <span>Jam Toolbar</span>
+    <a class="jam-options-link" href="/" target="_self">
+      <i class="fas fa-home"></i></a>
+    <a class="jam-options-link" href="/dashboard" target="_self">
+      <i class="fas fa-user"></i></a>
+    <a class="jam-options-link" href="" target="_self">
+      <i class="fas fa-search"></i></a>
+    <a class="jam-options-link" href="/users/sign_out" target="_self">
+      <i class="fas fa-sign-out-alt"></i></a>
+  </div>
+</div>
