Skills Controller and view are Done

--- a/app/views/skills/edit.html.erb
+++ b/app/views/skills/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Skills#edit</h1>
-<p>Find me in app/views/skills/edit.html.erb</p>
+<h2>Edit Skill</h2>
+<%= render '/skills/skill_form', skill: @skill, instruments: @instruments %>
