--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Skills#new</h1>
-<p>Find me in app/views/skills/new.html.erb</p>
+<h2>New Skill</h2>
+<%= render 'skills/skill_form', skill: @skill, instruments: @instruments %>
