--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Skills#show</h1>
-<p>Find me in app/views/skills/show.html.erb</p>
+<h1><%= @skill.instrument.name %></h1>
+<h1><%= @skill.level %></h1>
