--- a/app/assets/stylesheets/components/_jam_hover_option.scss
+++ b/app/assets/stylesheets/components/_jam_hover_option.scss
@@ -139,3 +139,10 @@ html {
   position: fixed;
   top: 600px;
 }
+.container-sticky-right {
+  position: fixed;
+  top: 610px;
+  right: 180px;
+  width: 50px;
+  height: 50px;
+}
