Pundit done for Participants

--- a/app/views/skills/_skill_form.html.erb
+++ b/app/views/skills/_skill_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for skill do |f| %>
-    # <%= f.input :instrument_id, collection: instruments, label_method: :name, value_method: :id, include_blank: false %>
+    # <%= f.input :instrument_id, collection: instruments.group_by(&:category), as: :grouped_select, group_method: :last, label_method: :name, value_method: :id, include_blank: false %>
     <div class="skills">
       <p id="skill_level"> ## Skill Level ## </p>
       <%= f.input :level, collection: ["Beginner", "Intermediate", "Expert"] %>
