--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Host Jam", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Jamming Sessions", jamms_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Dashboard", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
