--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,9 +1,6 @@
 .card {
   box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
-}
-.card-img-top {
-  width: 18rem;
-  height: 188px;
+  width: 100%;
 }
 .card-header {
   padding-bottom: 5px;
@@ -15,10 +12,16 @@
 }
 .list-group-item {
   color: black;
+  i {
+    padding: 5px;
+    font-size: 15px;
+    margin-left: 10px;
+  }
 }
 .h3-tab-content-title {
   color: black;
   margin-bottom: 30px;
+  margin-left: 50px;
 }
 .list-group-item:last-child {
   margin-bottom: 80px;
