--- a/app/views/jamms/index.html.erb
+++ b/app/views/jamms/index.html.erb
@@ -1,7 +1,17 @@
-<h1>Jamms#index</h1>
-<p>Find me in app/views/jamms/index.html.erb</p>
 
-<div class="container container-sticky">
+<div class="container-fluid">
+  <div class="row">
+    <h3 class="h3-tab-content-title">All Jams</h3>
+      <% @jamms.each do |jamm| %>
+        <div class="col-xs-12 col-sm-4" style="padding: 50px;">
+          <%= render "pages/jamms_tab_card", jamm: jamm %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="container container-sticky-right">
   <div class="hover">
     <span>Jam Toolbar</span>
     <a class="jam-options-link" href="/" target="_self">
@@ -9,8 +19,11 @@
     <a class="jam-options-link" href="/dashboard" target="_self">
       <i class="fas fa-user"></i></a>
     <a class="jam-options-link" href="" target="_self">
-      <i class="fas fa-search"></i></a>
-    <a class="jam-options-link" href="/users/sign_out" target="_self">
-      <i class="fas fa-sign-out-alt"></i></a>
+      <i class="fas fa-search"></i>
+    </a>
+    <%= link_to destroy_user_session_path, method: :delete, class: "jam-options-link",target:"_self",rel:"nofollow" do %>
+        <i class="fas fa-sign-out-alt"></i>
+        <% t(".sign_out", default: "Log out") %>
+    <% end %>
   </div>
 </div>
