--- a/app/views/jamms/new.html.erb
+++ b/app/views/jamms/new.html.erb
@@ -1,11 +1,27 @@
-<h1>Jamms#new</h1>
-<p><%= simple_form_for @jamm do |f| %></p>
-<p><%= f.input :title %></p>
-<p><%= f.input :description %></p>
-<p><%= f.input :location %></p>
-<p><%= f.input :date %></p>
-<p><%= f.input :capacity %></p>
-<p><%= f.input :duration %></p>
-<p><%= f.submit "Create a jam session" %></p>
-<p>I NEED THIS PARAGRAPH TO MAKE THE SUBMIT BUTTON SHOWN</p>
-<% end %>
+<div class="banner2">
+<div>
+<h1 class="jams-new-h1">Create a new Jam!</h1>
+<div class="container jams-new">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-sm-offset-3">
+      <div class="form-login2 margin-top">
+      <p><%= simple_form_for @jamm do |f| %></p>
+      <div class="form-inputs">
+      <p><%= f.input :title %></p>
+      <p><%= f.input :description %></p>
+      <p><%= f.input :location %></p>
+      <p><%= f.input :date, as: :date, html5: true %></p>
+      <p><%= f.input :capacity %></p>
+      <p><%= f.input :duration %></p>
+      </div>
+      <div class="form-actions">
+      <p><%= f.submit "Create a jam session", class: "btn btn-primary"%></p>
+      </div>
+    <!--   <p>I NEED THIS PARAGRAPH TO MAKE THE SUBMIT BUTTON SHOWN</p> -->
+      <% end %>
+      </div>
+   </div>
+  </div>
+</div>
+</div>
+</div>
