--- a/app/views/pages/_instruments_tab_card.html.erb
+++ b/app/views/pages/_instruments_tab_card.html.erb
@@ -1,5 +1,6 @@
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" img src="https://source.unsplash.com/collection/255732" alt="Card image cap">
+
+<div class="card-image-top" style="background: url('https://source.unsplash.com/collection/255732') no-repeat center center; height: 200px;">
+</div>
     <div class="card-header">
       <%= skill.instrument.category %>
     </div>
