--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -28,18 +28,15 @@
                 data: { confirm: "Are you sure?" } %><% end %></li>
        <li class="list-group-item">
          <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %> </li>
-      
+         <li class="list-group-item">
+        <hr>
+        <% @jamm.participations.each do |participation| %>
+         <%= render 'jamms/participation', participation: participation %>
+          <% end %>
+        <hr> </li>
       </ul>
     </div>
   </div>
-
-
-
-<hr>
-<% @jamm.participations.each do |participation| %>
-  <%= render 'jamms/participation', participation: participation %>
-<% end %>
-<hr>
 
 <div class="container container-sticky-right">
   <div class="hover">
