--- a/app/assets/stylesheets/components/_jam_hover_option.scss
+++ b/app/assets/stylesheets/components/_jam_hover_option.scss
@@ -141,7 +141,7 @@ html {
 }
 .container-sticky-right {
   position: fixed;
-  top: 610px;
+  top: 81%;
   right: 180px;
   width: 50px;
   height: 50px;
