--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,13 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :username %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
     <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :avatar %>
+    <%= f.input :avatar_cache, as: :hidden %>
+
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
