--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,12 @@
           <%= f.error_notification %>
 
           <div class="form-inputs">
+            <%= f.input :username %>
+            <%= f.input :first_name %>
+            <%= f.input :last_name %>
+            <%= f.label :avatar %>
+            <%= f.file_field :avatar %>
+            <%= f.hidden_field :avatar_change %>
             <%= f.input :email,
                         required: true,
                         autofocus: true ,
