creator of jamm automaticaly join the jamù

--- a/app/views/jamms/_participation.html.erb
+++ b/app/views/jamms/_participation.html.erb
@@ -4,5 +4,5 @@
 <div id="participant-<%= user.id %>">
   <p>email: <%= user.email %> </p>
   <p>instrument: <%= participation.instrument.name %></p>
-  <p>status: Pending </p>
-</div>
+  <p>status: <%= participation.status %> </p>
+</div><br>
