--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -27,7 +27,8 @@
             <%= link_to "Delete", jamm_path(@jamm), method: :delete,
                 data: { confirm: "Are you sure?" } %><% end %></li>
        <li class="list-group-item">
-         <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %> </li>
+        <% if policy(@jamm).join? %>
+         <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %><% end %></li>
          <li class="list-group-item">
         <hr>
         <h3>Participants</h3>
