--- a/app/views/participations/create.html.erb
+++ b/app/views/participations/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Participants#create</h1>
-<p>Find me in app/views/participants/create.html.erb</p>
+<h1><%= @jamm.title %></h1>
+<p>Sorry but this jam session is already full</p>
