--- a/app/views/participations/create.html.erb
+++ b/app/views/participations/create.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @jamm.title %></h1>
 <p>Sorry but this jam session is already full</p>
+<p><%= link_to "Look for another jam session", jamms_path %></p>
