--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,9 +11,8 @@
             <%= f.input :username %>
             <%= f.input :first_name %>
             <%= f.input :last_name %>
-            <%= f.label :avatar %>
-            <%= f.file_field :avatar %>
-            <%= f.hidden_field :avatar_change %>
+            <%= f.input :avatar %>
+            <%= f.input :avatar_cache, as: :hidden%>
             <%= f.input :email,
                         required: true,
                         autofocus: true ,
