--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,18 +4,19 @@
 }
 .card-header {
   padding-bottom: 5px;
-  padding-top: 5px;
+  padding-top: 15px;
   background-color: #E5E5E5;
-  padding-left: 5px;
+  padding-left: 15px;
   color: black;
   font-weight: bolder;
 }
 .list-group-item {
   color: black;
   i {
-    padding: 5px;
+    padding-right: 10px;
     font-size: 15px;
-    margin-left: 10px;
+    margin-left: 25px;
+    color: #6BCDC1;
   }
 }
 .h3-tab-content-title {
