--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="banner-content text-center">
     <h1>SoulJam</h1>
     <p>Let's speak the language of the soul</p>
-    <%= link_to "Start now", new_user_session_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Start now", jamms_path, class: "btn btn-lg btn-primary" %>
   </div>
 </div>
 
