--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -16,7 +16,7 @@
               <%= @jamm.location %></li>
               <li class="list-group-item"><i class="fas fa-calendar-alt"></i><%= @jamm.date %></li>
               <li class="list-group-item"><i class="fas fa-users"></i><%= @jamm.capacity %></li>
-              <li class="list-group-item"><i class="fas fa-clock"></i><%= @jamm.duration %></li>
+              <li class="list-group-item"><i class="fas fa-clock"></i><%= @jamm.duration %> hr</li>
               <li class="list-group-item">
                 <%= User.find(@jamm.creator_id).email %></li>
                 <% if policy(@jamm).edit? %>
