--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -28,7 +28,9 @@
                 data: { confirm: "Are you sure?" } %><% end %></li>
        <li class="list-group-item">
         <% if policy(@jamm).join? %>
-         <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %><% end %></li>
+         <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %><% end %>
+          <%= link_to "Send a message", new_jamm_message_path(@jamm), class: 'btn btn-primary' %>
+         </li>
          <li class="list-group-item">
         <hr>
         <h3>Participants</h3>
@@ -36,6 +38,11 @@
          <%= render 'jamms/participation', participation: participation %>
           <% end %>
         <hr> </li>
+        <h3>Messages</h3>
+        <% @messages.each do |message| %>
+        <p><strong><%= message.user.username %></strong>, the <%= message.created_at %></p>
+        <p><%= message.content %></p>
+        <% end %>
       </ul>
     </div>
   </div>
