--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -41,7 +41,9 @@
         <h3>Messages</h3>
         <% @messages.each do |message| %>
         <p><strong><%= message.user.username %></strong>, the <%= message.created_at %></p>
-        <p><%= message.content %></p>
+        <p><%= message.content %> <% if policy(message).destroy? %>
+            <%= link_to "Delete", jamm_message_path(@jamm, message), method: :delete,
+                data: { confirm: "Are you sure?" } %><% end %></p>
         <% end %>
       </ul>
     </div>
