--- a/app/views/jamms/new.html.erb
+++ b/app/views/jamms/new.html.erb
@@ -12,6 +12,8 @@
       <p><%= f.input :capacity %></p>
       <p><%= f.input :duration %></p>
       <p><%= f.input :instruments, collection: @instruments.group_by(&:category), as: :grouped_select, group_method: :last, label_method: :name, value_method: :id, include_blank: false %></p>
+      <p><%= f.input :photo %></p>
+      <p><%= f.input :photo_cache, as: :hidden %></p>
       </div>
       <div class="form-actions">
       <p><%= f.submit "Create a jam session", class: "btn btn-primary"%></p>
