--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -3,7 +3,7 @@
 
 
 <div class="card">
-  <div class="card-image-top" style="background: url('https://source.unsplash.com/collection/3471774') no-repeat center center; height: 200px;">
+  <div class="card-image-top2" style="background: url('<%= cl_image_path @jamm.photo.url, height: 300, width: 400, crop: :fill %>') no-repeat center center">
   </div>
 </div>
     <div class="card-header">
