--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -3,7 +3,7 @@
 
 
 <div class="card">
-  <div class="card-image-top2" style="background: url('<%= cl_image_path @jamm.photo.url, height: 300, width: 400, crop: :fill %>') no-repeat center center">
+  <div class="card-image-top2" style="background: url('<%=  @jamm.photo.url ? cl_image_path(@jamm.photo.url, height: 300, width: 400, crop: :fill) : image_path("background-new-jam.jpg") %>') no-repeat center center">
   </div>
 </div>
     <div class="card-header">
@@ -15,7 +15,9 @@
              <li class="list-group-item">
               <%= @jamm.location %></li>
               <li class="list-group-item"><i class="fas fa-calendar-alt"></i><%= @jamm.date %></li>
-              <li class="list-group-item"><i class="fas fa-users"></i><%= @jamm.capacity %></li>
+              <li class="list-group-item"><i class="fas fa-users"></i><%= @jamm.capacity %>
+              <% if @jamm.capacity == @jamm.participations.where(status: 'Accepted').size %>
+              <span style="color:red;"><strong> This jam is full </strong></span><% end %></li>
               <li class="list-group-item"><i class="fas fa-clock"></i><%= @jamm.duration %> hr</li>
               <li class="list-group-item">
                 <%= User.find(@jamm.creator_id).email %></li>
