--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,14 +32,24 @@
             <%= render "pages/jamms_tab_card", jamm: jamm %>
           </div>
           <% end %>
+          </div>
+          <div class="row">
           <h3 class="h3-tab-content-title">My Participations</h3>
           <% @myparts.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
           </div>
         <% end %>
+        </div>
+        <div class="row">
+        <h3 class="h3-tab-content-title">My Applications</h3>
+          <% @myapplications.each do |jamm| %>
+          <div class="col-xs-12 col-sm-4">
+            <%= render "pages/jamms_tab_card", jamm: jamm %>
+          </div>
+        <% end %>
+        </div>
       </div>
-    </div>
   </div>
 
 <!-- <div id="Profile" class="tabcontent">
