instrument images are uploaded and shown on the dashbord

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,3 +31,9 @@
   height: 50vh;
   // background-size: cover;
 }
+
+.instrument-card {
+    height: 220px;
+    display: block;
+    margin: 10px auto;
+}
