--- a/app/views/pages/_instruments_tab_card.html.erb
+++ b/app/views/pages/_instruments_tab_card.html.erb
@@ -1,15 +1,14 @@
 
-<div class="card-image-top" style="background: url('https://source.unsplash.com/collection/255732') no-repeat center center; height: 200px;">
+<%= cl_image_tag skill.instrument.icon_url, class: "instrument-card" %>
+
+<div class="card-header">
+  <%= skill.instrument.category %>
 </div>
-    <div class="card-header">
-      <%= skill.instrument.category %>
-    </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"><%= skill.instrument.name %></li>
-        <li class="list-group-item"><%= skill.level %></li>
-        <li class="list-group-item"><%= link_to "Edit", edit_skill_path(skill), class: "btn btn-primary" %>
-        <%= link_to skill_path(skill), method: :delete, data: { confirm: "Are your sure you want to delete this instrument #{skill.level}"} do %>
-        <p><i class= "far fa-trash-alt"></i> Cancel Instrument</p>
-          <% end %></li>
-      </ul>
-</div>
+<ul class="list-group list-group-flush">
+  <li class="list-group-item"><%= skill.instrument.name %></li>
+  <li class="list-group-item"><%= skill.level %></li>
+  <li class="list-group-item"><%= link_to "Edit", edit_skill_path(skill), class: "btn btn-primary" %>
+  <%= link_to skill_path(skill), method: :delete, data: { confirm: "Are your sure you want to delete this instrument #{skill.level}"} do %>
+  <p><i class= "far fa-trash-alt"></i> Cancel Instrument</p>
+    <% end %></li>
+</ul>
