search by location

--- a/app/views/jamms/index.html.erb
+++ b/app/views/jamms/index.html.erb
@@ -1,4 +1,10 @@
-
+<%= form_tag jamms_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a jam in your city"
+  %>
+<% end %>
 <div class="container-fluid">
   <div class="row">
     <h3 class="h3-tab-content-title">All Jams</h3>
