--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
+
     <%= render 'shared/footer' %>
 
     <%= javascript_include_tag 'application' %>
