tooltip for participant view

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,3 +31,9 @@
   height: 50vh;
   // background-size: cover;
 }
+.set-inline {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+}
