--- a/app/views/pages/_jamms_tab_card.html.erb
+++ b/app/views/pages/_jamms_tab_card.html.erb
@@ -1,6 +1,5 @@
-<div class="card">
-  <div class="card-image-top" style="background: url('https://source.unsplash.com/collection/3471774') no-repeat center center; height: 200px;">
-  </div>
+
+  <%= cl_image_tag jamm.photo, class: "instrument-card" %>
     <div class="card-header">
       <p><%= jamm.title %></p>
         </div>
