Jamms cards and pictures are fixed

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -41,6 +41,7 @@
     height: 220px;
     display: block;
     margin: 10px auto;
+    width: 100%;
 }
 
 .instrument-card1 {
@@ -50,3 +51,7 @@
     margin: 10px auto;
 }
 
+
+.jam-card-wrapper {
+  height: 500px;
+}
