--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -25,6 +25,8 @@
         <% if policy(@jamm).join? %>
          <%= link_to "Join",  new_jamm_participation_path(@jamm), class: 'btn btn-primary' %><% end %>
           <%= link_to "Send a message", new_jamm_message_path(@jamm), class: 'btn btn-primary' %>
+          <% if policy(@jamm).review? %>
+          <%= link_to "Review this jam", new_jamm_review_path(@jamm), class: 'btn btn-primary' %><% end %>
          </li>
          <div
             id="map"
@@ -52,6 +54,13 @@
         <p><%= message.content %> <% if policy(message).destroy? %>
             <%= link_to "Delete", jamm_message_path(@jamm, message), method: :delete,
                 data: { confirm: "Are you sure?" } %><% end %></p>
+        <% end %>
+        <h3>Reviews</h3>
+        <% @reviews.each do |review| %>
+        <p><strong><%= review.title %></strong> <% if review.title.empty? %>Review</p><% end %>
+        <p>by <%= review.participation.user.username %></p>
+        <p><%= review.content %></p>
+        <p><strong>Rating : </strong><%= review.rating %></p>
         <% end %>
       </ul>
     </div>
