--- a/app/views/pages/_jamms_tab_card.html.erb
+++ b/app/views/pages/_jamms_tab_card.html.erb
@@ -26,6 +26,8 @@
           <% if policy(jamm).destroy? %>
             <%= link_to "Delete", jamm_path(jamm), method: :delete,
                 data: { confirm: "Are you sure?" } %><% end %></li>
+          <% if policy(jamm).review? %>
+            <li class="list-group-item"><%= link_to "Review this jam", new_jamm_review_path(jamm) %></li><% end %>
       </ul>
 </div>
 
