--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,7 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<h1 class="jams-new-h1">Edit <%= resource_name.to_s.humanize %></h1>
+<div class="container jams-new">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-sm-offset-3">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
@@ -30,12 +32,16 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+   <p><%= f.submit "Update", class: "btn btn-primary"%></p>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+         <h4 class="form-actions">Cancel my account</h4>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+         <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+        <%= link_to "Back", :back %>
+    </div>
+  </div>
+</div>
+
