--- a/app/views/pages/_instruments_tab_card.html.erb
+++ b/app/views/pages/_instruments_tab_card.html.erb
@@ -1,5 +1,5 @@
 
-<%= cl_image_tag skill.instrument.icon_url, class: "instrument-card" %>
+<%= cl_image_tag skill.instrument.icon_url, class: "instrument-card1" %>
 
 <div class="card-header">
   <%= skill.instrument.category %>
